# DebugNode-ComfyUI

./: LICENSE  README.md  __init__.py  debugnode.py  pyproject.toml
js/: debugnode.js
